--- a/client/int-blog/package.json
+++ b/client/int-blog/package.json
@@ -11,6 +11,7 @@
     "@chakra-ui/react": "^1.6.6",
     "@emotion/react": "11",
     "@emotion/styled": "11",
+    "@fontsource/montserrat": "^4.5.1",
     "framer-motion": "4",
     "next": "11.1.0",
     "react": "17.0.2",
