--- a/client/int-blog/package.json
+++ b/client/int-blog/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "11",
     "@emotion/styled": "11",
     "@fontsource/montserrat": "^4.5.1",
+    "axios": "^0.21.1",
     "framer-motion": "4",
     "next": "11.1.0",
     "react": "17.0.2",
