--- a/client/int-blog/package.json
+++ b/client/int-blog/package.json
@@ -12,11 +12,12 @@
     "@emotion/react": "11",
     "@emotion/styled": "11",
     "@fontsource/montserrat": "^4.5.1",
-    "axios": "^0.21.1",
+    "cors": "^2.8.5",
     "framer-motion": "4",
     "next": "11.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-icons": "^4.2.0"
+    "react-icons": "^4.2.0",
+    "swr": "^1.0.0"
   }
 }
