--- a/backend/.env
+++ b/backend/.env
@@ -2,3 +2,4 @@ MONGO_URL = mongodb+srv://caf3:matsolo33@blogapp.qfsic.mongodb.net/inkwezo?retry
 PORT = 5001
 JWT_SECRET = sdijfioj2i4j2klnskljfosiufi23u489
 VALID_HOST = localhost:5001, tomascaetano.com
+DEFAULT_PAGINATION_SIZE = 10
