--- a/client/int-blog/package.json
+++ b/client/int-blog/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "framer-motion": "4",
     "next": "11.1.0",
+    "next-remove-imports": "^1.0.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
