--- a/client/int-blog/package.json
+++ b/client/int-blog/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.21.2",
     "cors": "^2.8.5",
     "framer-motion": "4",
+    "js-cookie": "^3.0.1",
     "next": "11.1.0",
     "next-remove-imports": "^1.0.5",
     "react": "17.0.2",
