--- a/backend/.env
+++ b/backend/.env
@@ -3,3 +3,5 @@ PORT = 5001
 JWT_SECRET = sdijfioj2i4j2klnskljfosiufi23u489
 VALID_HOST = localhost:5001, tomascaetano.com
 DEFAULT_PAGINATION_SIZE = 10
+GOOGLE_CLIENT_ID = 868408902160-phpbmg2m1eqigbi6lkdbisafu7gte1hm.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET = N1vkNX2MwV1uYVyme_3yjILy
