--- a/backend/package.json
+++ b/backend/package.json
@@ -15,9 +15,12 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.7",
     "nodemailer": "^6.6.3",
+    "passport": "^0.4.1",
+    "passport-google-oauth20": "^2.0.0",
     "swagger-ui-express": "^4.1.6"
   }
 }
