--- a/backend/.env
+++ b/backend/.env
@@ -6,3 +6,5 @@ DEFAULT_PAGINATION_SIZE = 10
 SESSION_SECRET = 9wyeiofklnsdlkfh9823072
 GOOGLE_CLIENT_ID = 868408902160-phpbmg2m1eqigbi6lkdbisafu7gte1hm.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET = N1vkNX2MwV1uYVyme_3yjILy
+GITHUB_CLIENT_ID = 5730592e72dd20e2cdda
+GITHUB_CLIENT_SECRET = f54112c4082da002e39fd34f52a4580822a1fecb
