--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^5.13.7",
     "nodemailer": "^6.6.3",
     "passport": "^0.4.1",
+    "passport-github2": "^0.1.12",
     "passport-google-oauth20": "^2.0.0",
     "swagger-ui-express": "^4.1.6"
   }
