--- a/backend/.env
+++ b/backend/.env
@@ -8,3 +8,5 @@ GOOGLE_CLIENT_ID = 868408902160-phpbmg2m1eqigbi6lkdbisafu7gte1hm.apps.googleuser
 GOOGLE_CLIENT_SECRET = N1vkNX2MwV1uYVyme_3yjILy
 GITHUB_CLIENT_ID = 5730592e72dd20e2cdda
 GITHUB_CLIENT_SECRET = f54112c4082da002e39fd34f52a4580822a1fecb
+FACEBOOK_CLIENT_ID = 229401835824925
+FACEBOOK_CLIENT_SECRET = c936184a4f63775de7baa1cc9c42f4db
